--- a/tema-casa-ionelaiftime/views/index.ejs
+++ b/tema-casa-ionelaiftime/views/index.ejs
@@ -67,31 +67,31 @@
         <h5> Dec 7, 2019</h5>
         <img  src="img2.jpg" alt="img" width="600" height="400" >
         <p>Astăzi mergem într-un tur virtual al unui apartament cu o repartizare ușor atipică a spațiilor. În mod normal, zona de zi ar trebui să fie cât mai aproape de bucătărie și sufragerie, însă în acest apartament pe două niveluri din Suedia, proprietarul a ales ca living-ul să fie amenajat la înălțime, departe de bucătărie, la mezanin. Decizia a venit probabil din nevoia mai mare de spațiu pentru activitățile pe timpul zilei și compromisul de a avea doar un colț pentru dormitor.</p>
-        <a href="./test.html" style="color: black;" >Vezi mai multe imagini</a>
+        <a href="/test" style="color: black;" >Vezi mai multe imagini</a>
       </div>
       <div class="card">
         <h2>Culori de toamnă și decor retro într-un apartament de 65 m² din Moscova </h2>
         <h5>Sep 2, 2019</h5>
         <img  src="img22.jpg" alt="img" width="600" height="400" >
         <p>Decor retro, pereți în culoarea caldă a caisei, accente turcoaz, albastru și verde aduc în designul interior al acestui apartament din Moscova o atmosferă tomnatică, veselă și primitoare.</p>
-        <a href="./test2.html" style="color: black;" >Vezi mai multe imagini</a>
+        <a href="/test2" style="color: black;" >Vezi mai multe imagini</a>
       </div>
     </div>
       <div class="leftcolumn">
       <div class="card">
         <h2>Decor luminos și feminin într-un apartament din Suedia</h2>
         <h5> Dec 7, 2019</h5>
-        <img  src="img31.jpg" alt="img" width="600" height="400" >
+        <img  src="img32.jpg" alt="img" width="600" height="400" >
         <p>Cei 97 m² ai acestui apartament din Göteborg sunt decorați în tonuri subtile de crem, cu detalii feminine și accente gri. La mezanin, apartamentul are un living secret, iar fiecare dormitor se bucură de un balconaș.
         </p>
-        <a href="./test3.html" style="color: black;" >Vezi mai multe imagini</a>
+        <a href="/test3" style="color: black;" >Vezi mai multe imagini</a>
       </div>
       <div class="card">
         <h2>Tonuri pastelate de albastru în amenajarea unei mansarde din Suedia</h2>
         <h5>Sep 2, 2019</h5>
-        <img  src="img41.jpg" alt="img" width="600" height="400" >
+        <img  src="img42.jpg" alt="img" width="600" height="400" >
         <p>Albastrul pastel din bucătărie și dormitor împreună cu naturalețea lemnului și lumina naturală aduc acestei amenajări scandinave un aer diafan și o atmosferă plină de calm.</p>
-        <a href="./test4.html" style="color: black;" >Vezi mai multe imagini</a>
+        <a href="/test4" style="color: black;" >Vezi mai multe imagini</a>
       </div>
      
     </div>
