--- a/tema-casa-ionelaiftime/views/layout.ejs
+++ b/tema-casa-ionelaiftime/views/layout.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="/public/style.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="/public/script.js"></script>
         <title >
             PW-Tema de casa
         </title>
