--- a/tema-casa-ionelaiftime/views/layout.ejs
+++ b/tema-casa-ionelaiftime/views/layout.ejs
@@ -20,6 +20,53 @@
                 <a href="/chestionar" >Chestionar</a>    
          
               </div>
+
+              <div class="nav">
+   
+                <div class="dropdown">
+                  <button class="dropbtn">Stiluri de amenajare 
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="/clasic">Amenajari in stil clasic</a>
+                    <a href="/contemporan">Amenajari in stil contemporan</a>
+                    <a href="/mediteranean">Amenajari in stil mediteranean</a>
+                    <a href="/minimalist">Amenajari in stil minimalist</a>
+                  </div>
+                </div>  
+                <div class="dropdown">
+                  <button class="dropbtn">Idei de amenajare
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="/baie">Idei de amenajare a baii</a>
+                    <a href="/bucatarie">Idei de amenajare a bucatariei</a>
+                    <a href="/dormitor">Idei de amenajare a dormitorului</a>
+                    <a href="/living">Idei de amenajare a livingului</a>
+                  </div>
+                </div> 
+                <div class="dropdown">
+                  <button class="dropbtn">Inspiratie
+                  </button>
+                  <div class="dropdown-content">
+                    <a href="#">Amenajari interioare in alb</a>
+                    <a href="#">Interioare pline de culoare</a>
+                    <a href="#">Amenajari interioare in plan deschis</a>
+                   
+                  </div>
+                </div>  
+                <div class="dropdown">
+                  <button class="dropbtn">Designeri de interior
+                  </button>
+                </div>  
+                <div class="dropdown">
+                  <button class="dropbtn">Contact
+                  </button>
+                </div>  
+            
+            
+            
+                
+              </div>
+            
         
             <%- body -%>
         </main>
