--- a/tema-casa-ionelaiftime/public/style.css
+++ b/tema-casa-ionelaiftime/public/style.css
@@ -268,3 +268,20 @@ header
       max-width: 100%;
     }
   }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+  .stil1 {
+    flex: 10%;
+    padding-top: 10px;
+    margin: 50px;
+    
+  }
+
+
+  
