--- a/tema-casa-ionelaiftime/views/layout.ejs
+++ b/tema-casa-ionelaiftime/views/layout.ejs
@@ -47,19 +47,19 @@
                   <button class="dropbtn">Inspiratie
                   </button>
                   <div class="dropdown-content">
-                    <a href="#">Amenajari interioare in alb</a>
-                    <a href="#">Interioare pline de culoare</a>
-                    <a href="#">Amenajari interioare in plan deschis</a>
+                    <a href="/alb">Amenajari interioare in alb</a>
+                    <a href="/culoare">Interioare pline de culoare</a>
+                    <a href="/negru">Amenajari interioare in alb si negru</a>
                    
                   </div>
                 </div>  
                 <div class="dropdown">
-                  <button class="dropbtn">Designeri de interior
-                  </button>
+                  <a href="/designeri" style="color: white;">Designeri de interior
+                  </a>
                 </div>  
                 <div class="dropdown">
-                  <button class="dropbtn">Contact
-                  </button>
+                  <a href="/contact" style="color: white;">Contact
+                  </a>
                 </div>  
             
             
