--- a/tema-casa-ionelaiftime/public/style.css
+++ b/tema-casa-ionelaiftime/public/style.css
@@ -283,5 +283,16 @@ header
     
   }
 
+  .cont {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+  }
 
+  .divv
+  {
+    padding-left: 100px;
+    padding-right: 200px;
+  }
   
