--- a/tema-casa-ionelaiftime/views/baie.ejs
+++ b/tema-casa-ionelaiftime/views/baie.ejs
@@ -36,8 +36,8 @@
                 Cadă sau cabină de duș?
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie2.jpg" style="float: left;width: 30%" > 
-                    În cazul amenajării unei băi de mici dimensiuni deseori cada nu este recomandată, deoarece ocupă spațiu care poate fi folosit cu un alt scop.  Dacă în amenajarea băii vrei totuși o cabină de duș și nu ai foarte mult loc, ori dimensiunile necesare, există posibilitatea de a-ți face o cabină open-space.
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie2.jpg" style="float: left;width: 30%;padding-right: 20px;" > 
+                   <br><br> În cazul amenajării unei băi de mici dimensiuni deseori cada nu este recomandată, deoarece ocupă spațiu care poate fi folosit cu un alt scop.<br><br>  Dacă în amenajarea băii vrei totuși o cabină de duș și nu ai foarte mult loc, ori dimensiunile necesare, există posibilitatea de a-ți face o cabină open-space.
                 </p>
                 </div>
 
@@ -46,8 +46,8 @@
             <h1>
                 Ce culori să alegi
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie3.jpg" style="float: left;width: 30%;vertical-align:middle;" > 
-                Armonia dintre elemente, unitatea dintre forme și culorile deschise ale acestora sunt factorii de succes pentru un design interior minimalist. Optează pentru nuanțe de alb, crem și maro deschis, iar pentru a sparge monotonia poți oricând să plasezi în baie unul sau două elemente de culoare intensă.
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie3.jpg" style="float: left;width: 30%;vertical-align:middle;padding-right: 20px;" > 
+                <br><br>Armonia dintre elemente, unitatea dintre forme și culorile deschise ale acestora sunt factorii de succes pentru un design interior minimalist.<br><br> Optează pentru nuanțe de alb, crem și maro deschis, iar pentru a sparge monotonia poți oricând să plasezi în baie unul sau două elemente de culoare intensă.
             </p>
             </div>
         
@@ -58,8 +58,10 @@
                     Cum alegi gresia și faianța
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie5.jpg" style="float: left;width: 30%" > 
-                    Pentru a induce senzația de spațiu poți folosi plăci ceramice glazurate, care reflectă lumina, dar, pe de altă parte, pentru o stare de confort, poți alege plăci ceramice mate, porțelanate.
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie5.jpg" style="float: left;width: 30%;padding-right: 20px;" > 
+                    <br><br>Cum mare parte a celor care își renovează băile doresc ca acestea să nu aibă aspectul unui spital, ar fi ideal să adauge anumite texturi plăcilor ceramice. 
+                    <br><br>Pentru a induce senzația de spațiu poți folosi plăci ceramice glazurate, care reflectă lumina, dar, pe de altă parte, pentru o stare de confort, poți alege plăci ceramice mate, porțelanate.
+                    <br><br>Cel puțin în cazul podelei, această textură este foarte importantă din două motive:Fără ea, atunci când lumina care intră pe geam este puternică, în special la răsărit sau la apus, razele solare se vor reflecta din gresie și te vor orbi;Dacă nu ai o textură pe pardoseală, riști ca atunci când ieși din duș ud, dacă nu ești atent, să aluneci și să cazi.
                 </p>
             </div>
             <div style="width: 100%;clear: both;   padding-top: 10px;">
@@ -67,8 +69,9 @@
                     Mobila
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie6.jpg" style="float: left;width: 40%" > 
-                    Cert este că cea mai indicată mobila pentru o baie mică de 3 mp este cea suspendată. Cu cât suprafața de la nivelul pardoselii este mai liberă, cu atât și încăperea va părea mai mare.
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="baie6.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
+                    <br><br>Dimensiunile băii vor dicta încă din start aspectul și amenajarea mobilierului. Dacă există limitări la acest capitol, alege să folosești spațiul într-un mod inteligent, apelând la dulapuri și măști de chiuvetă de colț, precum și la piese suspendate. <br><br>Amplasarea mobilierului din lemn, din PAL sau din MDF este contraindicată în lipsa unei surse directe de ventilație, caz în care va fi mai bine să alegi corpuri din dolomit sau din DTD laminat.
+                    <br><br>Cert este că cea mai indicată mobila pentru o baie mică de 3 mp este cea suspendată. Cu cât suprafața de la nivelul pardoselii este mai liberă, cu atât și încăperea va părea mai mare.
             </div>
             
 
