--- a/tema-casa-ionelaiftime/views/bucatarie.ejs
+++ b/tema-casa-ionelaiftime/views/bucatarie.ejs
@@ -36,7 +36,7 @@
                 Bucătării în formă de L sau U? – Avantaje și Dezavantaje
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc2.jpg" style="float: left;width: 30%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc2.jpg" style="float: left;width: 30%;padding-right: 20px;" > 
                     Când stabilești stilul de amenajare pentru bucătăria ta ai la dispoziție mai multe forme gândite în funcție de fronturile mobilierului. Ai la dispoziție varianta cu front pe un singur rând, cu două fronturi paralele, dar și variantele în formă de L – un front aranjat pe doi pereți – și în formă literei U – un front aranjat pe trei pereți.<br><br> Acestea din urmă în formă de L și U sunt alegeri foarte populare pentru bucătăriile mici, pentru că ajută la organizarea mai eficientă a spațiului.
 
 
@@ -49,7 +49,7 @@
             <h1>
                 Bucatarie open space – Elemente esentiale
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc3.jpg" style="float: left;width: 30%;vertical-align:middle;" > 
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc3.jpg" style="float: left;width: 30%;vertical-align:middle;padding-right: 20px;" > 
                 Amenajarea unei bucatarii deschise catre living, care include si o zona de dining, vine cu o serie de avantaje si dezavantaje. Intr-o bucatarie open space sunt esentiale urmatoarele elemente:
             </p>
             <ul style="font-size: x-large;text-align: justify; text-indent: 50px;">
@@ -66,7 +66,7 @@
                     Bucatarie in balcon – De ce sa tii cont
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc4.jpg" style="float: left;width: 30%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc4.jpg" style="float: left;width: 30%;padding-right: 20px;" > 
                     Amenajarea unei bucatarii in balcon necesita racordarea la sursele de apa, energie electrica si gaze (daca optezi pentru cuptor electric si plita electrica sau cu inductie, scapi de grija sursei de alimentare cu gaze). <br><br>
                     De asemenea, trebuie sa tii cont de faptul ca balconul care nu este de tip logie (care iese in relief pe peretele blocului) nu a fost construit pentru a sustine o greutate mare in mod constant – asigura-te ca va suporta greutatea electrocasnicelor, chiuvetei si altor obiecte pe care le vei aduce aici. 
 
@@ -78,7 +78,7 @@
                     Cum alegem culoarea mobilierului de bucătărie?
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc5.jpg" style="float: left;width: 40%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="buc5.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
                     Cele mai potrivite alegeri pentru culoarea mobilierului sunt nuanțele calde. Pentru bucătăriile mici, așa cum îți spuneam mai sus, culorile deschise sunt mereu varianta câștigătoare. În cazul în care spațiul nu este o problemă, poți alege și culori mai închise, dar în echilibru vizual cu finisajele.
 
                 
