--- a/tema-casa-ionelaiftime/views/clasic.ejs
+++ b/tema-casa-ionelaiftime/views/clasic.ejs
@@ -43,8 +43,8 @@
             <h1>
                 Mobilierul
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic2.jpg" style="float: left;width: 50%;vertical-align:middle;" > 
-            Piesele de mobilier sunt impunătoare și rafinate, fiind confecționate din esențe de lemn masiv de stejar, nuc, mesteacăn, vișin sau mahon, în nuanțe predominant închise. <br>Majoritatea pieselor de mobilier sunt lăcuite, oferind senzația de spațiu aerisit. Canapelele și fotoliile sunt, de obicei, confecționate din piele naturală sau țesături prețioase.<br> Pe scurt, mobila în stil clasic este funcțională, confortabilă și rafinată.
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic2.jpg" style="float: left;width: 50%;vertical-align:middle;padding-right: 20px;" > 
+            Piesele de mobilier sunt impunătoare și rafinate, fiind confecționate din esențe de lemn masiv de stejar, nuc, mesteacăn, vișin sau mahon, în nuanțe predominant închise. <br><br>Majoritatea pieselor de mobilier sunt lăcuite, oferind senzația de spațiu aerisit. Canapelele și fotoliile sunt, de obicei, confecționate din piele naturală sau țesături prețioase.<br><br> Pe scurt, mobila în stil clasic este funcțională, confortabilă și rafinată.
             Totodată, nu ar trebui să lipsească un șemineu sau o vitrină din lemn masiv, pe care să așezi obiecte de artă, tablouri sau alte decorațiuni în stil clasic. 
             </p>
             </div>
@@ -54,8 +54,8 @@
             Culorile
             </h1>
 
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic3.jpg" style="float: left;width: 50%" > 
-            Nuanțele caracteristice stilului clasic sunt calde sau neutre, fiind folosit predominant albul, dar și nuanțe pastel, precum bej, crem, galben pal, oliv, cărămiziu, fildeș și accente de auriu.<br> Acestea dau locuinței un aer relaxant, primitor și cald. Pot fi folosite și nuanțe de maro, însă ai grijă ca acestea să nu ofere un aer sumbru locuinței.<br> Materialele textile pot avea nuanțe de albastru deschis sau albastru verzui. Pereții pot fi îmbrăcați în tapet.
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic3.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
+            Nuanțele caracteristice stilului clasic sunt calde sau neutre, fiind folosit predominant albul, dar și nuanțe pastel, precum bej, crem, galben pal, oliv, cărămiziu, fildeș și accente de auriu.<br><br> Acestea dau locuinței un aer relaxant, primitor și cald. Pot fi folosite și nuanțe de maro, însă ai grijă ca acestea să nu ofere un aer sumbru locuinței.<br><br> Materialele textile pot avea nuanțe de albastru deschis sau albastru verzui. Pereții pot fi îmbrăcați în tapet.
             </p>
             </div>
 
@@ -64,8 +64,8 @@
                 Decorațiunile
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic4.jpg" style="float: left;width: 50%" > 
-                    Decorațiunile își pun amprenta asupra stilului clasic și scot în evidență rafinamentul și eleganța unei locuințe.<br> Pot fi folosite vase din porțelan, sculpturi, ceasuri cu pendul, tablouri și oglinzi, de preferat cu rame de lemn sau aurii. Pentru ferestre poți folosi țesături fine, în culori calde, care să scoată în evidență rafinamentul stilului clasic.
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic4.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
+                    <br><br>Decorațiunile își pun amprenta asupra stilului clasic și scot în evidență rafinamentul și eleganța unei locuințe.<br><br>Pot fi folosite vase din porțelan, sculpturi, ceasuri cu pendul, tablouri și oglinzi, de preferat cu rame de lemn sau aurii.<br><br> Pentru ferestre poți folosi țesături fine, în culori calde, care să scoată în evidență rafinamentul stilului clasic.
                 </p>
             </div>
             <div style="width: 100%;clear: both;   padding-top: 10px;">
@@ -73,15 +73,15 @@
                     Corpurile de iluminat
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic5.jpg" style="float: left;width: 50%" > 
-                    Candelabrul este un corp de iluminat specific stilului clasic, împreună cu lămpi confecționate din pietre decorative sau din sticlă. <br >Fixat în centrul unei camere, candelabrul distribuie uniform lumina și creează o atmosferă relaxantă și rafinată.<br>Pentru iluminat mai poți folosi veioze, lumânări, lampadare sau sfeșnice de bronz, care dau un aer intim și cald oricărei încăperi.
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic5.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
+                    Candelabrul este un corp de iluminat specific stilului clasic, împreună cu lămpi confecționate din pietre decorative sau din sticlă. <br><br>Fixat în centrul unei camere, candelabrul distribuie uniform lumina și creează o atmosferă relaxantă și rafinată.<br><br>Pentru iluminat mai poți folosi veioze, lumânări, lampadare sau sfeșnice de bronz, care dau un aer intim și cald oricărei încăperi.
             </div>
             <div style="width: 100%;clear: both;   padding-top: 10px;">
                 <h1>
                    Podelele
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic6.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="clasic6.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     Pentru un interior în stil clasic, optează pentru podele din lemn, piatră sau marmură. Poți așeza în centrul încăperii un covor de lână, astfel încât să respecți simetria caracteristică stilului clasic.
             </div>
 
