--- a/tema-casa-ionelaiftime/views/contact.ejs
+++ b/tema-casa-ionelaiftime/views/contact.ejs
@@ -12,7 +12,7 @@
   </header>
 <main>
         
-    <form  class="test" action="contact" method="GET">
+    <form  class="test" action="rezcontact" method="GET">
         <h1 style="padding-top: 20px;padding-left: 100px;">
                     
          Contact
