--- a/tema-casa-ionelaiftime/views/contemporan.ejs
+++ b/tema-casa-ionelaiftime/views/contemporan.ejs
@@ -43,8 +43,8 @@
             <h1>
                 Mobilierul
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan2.jpg" style="float: left;width: 50%;vertical-align:middle;" > 
-                Interioarele contemporane nu se rezumă doar la mono-stil, acestea îmbină cu succes elemente specifice stilurilor precum: Art-Deco, high-tech, eclectic, minimalist, retro, loft, shabby chic, tradițional, Art Nouveau. Rezultatul este o ambianță confortabilă și plăcută, fără elemente foarte complexe.
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan2.jpg" style="float: left;width: 50%;vertical-align:middle;padding-right: 20px;" > 
+                <br>Interioarele contemporane nu se rezumă doar la mono-stil, acestea îmbină cu succes elemente specifice stilurilor precum: Art-Deco, high-tech, eclectic, minimalist, retro, loft, shabby chic, tradițional, Art Nouveau.<br><br> Rezultatul este o ambianță confortabilă și plăcută, fără elemente foarte complexe.
             </p>
             </div>
         
@@ -53,7 +53,7 @@
             Culorile
             </h1>
 
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan3.jpg" style="float: left;width: 50%" > 
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan3.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                 Amenajările contemporane propun un stil liniștit, punând accent pe confortul psihologic, iar componența principală constituie alegerea unei game cromatice echilibrate. Interiorul contemporan nu are restricții prin culoare.
             </div>
 
@@ -62,7 +62,7 @@
             Decorațiunile
             </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan4.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan4.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     Fiecare element din decorul contemporan este unic în felul lui și contribuie la crearea unui ambient care invită la relaxare. De obicei, accentul se pune pe accesorii care atrag atenția prin textură, culoare, dimensiune, etc.
                 </p>
             </div>
@@ -71,7 +71,7 @@
                     Corpurile de iluminat
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan5.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan5.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     În ceeea ce privește iluminatul, posibilitățile sunt nelimitate, deoarece se pot folosi de la simple spot-uri încadrate în tavan, lampadare minimaliste, lustre moderne, până la candelabre impresionante. Totul ține de ingeniozitatea ta!
             </div>
             <div style="width: 100%;clear: both;   padding-top: 10px;">
@@ -79,7 +79,7 @@
                    Plantele
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan6.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="contemporan6.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     Nu neglija plantele. Departe de a avea doar un rol decorativ în încăpere, acestea contribuie la împrospătarea și oxigenarea spațiului respectiv. Totodată, ele vor crea senzația de vitalitate și vor lumina starea de spirit a persoanelor din spațiul respectiv.
             </div>
 
