--- a/tema-casa-ionelaiftime/views/dormitor.ejs
+++ b/tema-casa-ionelaiftime/views/dormitor.ejs
@@ -36,7 +36,7 @@
                     Dispunerea ergonomică a mobilierului în dormitor
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor2.jpg" style="float: left;width: 40%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor2.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
                     Un aspect de luat în considerare atunci când vă amenajați dormitorul este modul în care aranjați mobilierul. Acesta trebuie dispus astfel încât să aveți acces facil la obiectele din jur.
                     <br><br>
                     Ușile dulapurilor și dulapurilor trebuie să se deschidă liber, fără a atinge tapițeria unei canapele sau a unui scaun. Cea mai de succes soluție la aceste probleme - elemente interioare care pot îndeplini mai multe sarcini.
@@ -48,7 +48,7 @@
             <h1>
                 Patul, elementul care dictează amenajarea dormitorului
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor3.jpg" style="float: left;width: 40%;vertical-align:middle;" > 
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor3.jpg" style="float: left;width: 40%;vertical-align:middle;padding-right: 20px;" > 
                 Când vorbim de mobilier de bază într-un dormitor, gândul ne zboară instant la pat. Pentru a crea un ambient plăcut în cameră, acesta este poziționat după o logică anume în funcție de forma și dimensiunea acestuia.<br><br>Dimensiunea patului ales contribuie la atmosfera creată în dormitor, de aceea este recomandat ca lungimea acestuia să fie mai mare cu 20 cm decât cea a corpului. Pentru a avea libertate de mișcare în cameră, patul ar trebui amplasat la o distanță de minimum 60 cm față de perete sau piesele de mobilier din cameră.
             </p>
             </div>
@@ -60,7 +60,7 @@
                     Luminile în straturi, soluția ideală pentru amenajarea dormitorului
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor4.jpg" style="float: left;width: 40%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor4.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
                     Iluminatul este strâns legat de gamă cromatică aleasă pentru dormitor și trebuie să însumeze cele trei componente majore: iluminatul general, cel de lucru în zonă noptierelor, sub formă de veioze, aplice și iluminatul decorativ în scafe.<br><br>
                     Luminile în serie sunt recomandate, fiind contraproductiv să folosiți doar o sursă de lumină pentru întregul dormitor. În momentul alegerii corpurilor de iluminat pentru dormitor trebuie să luați în considerare funcționalitatea acestora și doar ulterior designul.
                 </p>
@@ -70,7 +70,7 @@
                     Alegerea tapetului pentru dormitor
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor5.jpg" style="float: left;width: 40%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="dor5.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
                     Tapetul sau fototapetul este o alegere foarte inspirată pentru a decora sau redecora pereții locuinței tale. Prin comparație cu vopsirea pereților cu vopsea lavabilă sau cu var, tapetul are o serie întreagă de avantaje. În primul rând, atunci când acoperi pereții unei camere cu tapet, vei evita tot praful, mizeria și vopseaua care stropește podelele și geamurile. Nu mai trebuie să protejezi și să infoliezi toate suprafețele din casă, ca să eviți pătarea și distrugerea acestora.
                     <br><br>
                     Instalarea tapetului este o operațiune rapidă și curată. După ce ai lipit ultima fâșie de tapet pe perete, poți folosi camera imediat. Nu e nevoie să aștepți să se usuce pereții, nici să petreci ore întregi curățând podele și geamuri. Tot ce trebuie să faci este să te relaxezi și să te bucuri de locuința ta proaspăt decorată.
