--- a/tema-casa-ionelaiftime/views/layout.ejs
+++ b/tema-casa-ionelaiftime/views/layout.ejs
@@ -9,12 +9,13 @@
     </head>
     <body>
         <header >
-            
+ 
                        
         </header>
         <main >
+            <img src onerror="info()">
             <div class="nav1">
-                <span id="datetime"></span>
+              <span id="datetime"></span>
                 <a href="/index" >Home </a> 
                 <a href="/autentificare" >Autentificare</a>    
                 <a href="/chestionar" >Chestionar</a>    
@@ -22,7 +23,7 @@
               </div>
 
               <div class="nav">
-   
+              
                 <div class="dropdown">
                   <button class="dropbtn">Stiluri de amenajare 
                   </button>
