--- a/tema-casa-ionelaiftime/views/living.ejs
+++ b/tema-casa-ionelaiftime/views/living.ejs
@@ -36,7 +36,7 @@
                     Amenajarea unui living open space
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living2.jpg" style="float: left;width: 40%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living2.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
                     Daca vrei sa folosesti culori diferite pentru peretii din diferitele zone ale spatiului deschis, pastreaza totusi o continuitate in culoarea si textura tamplariei usilor si ferestrelor.
                    <br><br> Foloseste pentru pardoseala acelasi finisaj, indiferent ca este vorba despre spatiul destinat gatitului sau despre camera de zi. Exista parchet din lemn laminat tratat special pentru spatii cu umiditate ridicata, ideal pentru bucatarie, asa ca nu te opreste nimic sa asiguri continuitatea aspectului la nivelul podelei.
                 </p>
@@ -47,7 +47,7 @@
             <h1>
                 Amenajarea unui living lung si ingust
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living3.jpg" style="float: left;width: 40%;vertical-align:middle;" > 
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living3.jpg" style="float: left;width: 40%;vertical-align:middle;padding-right: 20px;" > 
                 Poti separa zonele din living-ul ingust si lung cu ajutorul covoarelor, a unui coltar in L sau a unei etajere in trepte.
                 <br><br>
                 Monteaza-l pe perete si asaza in jurul lui tablouri sau fotografii inramate alb-negru. In felul acesta, atunci cand este inchis, nu va arata ca un dreptunghi negru nelalocul lui, ci va parea integrat in decor.
@@ -62,7 +62,7 @@
                     Mixul de culori și texturi în funcție de stilul dorit
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living4.jpg" style="float: left;width: 40%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living4.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
                     În cazul unui living, de cele mai multe ori ne dorim să ajungem cât mai repede acasă, să ne bucurăm de spațiul pe care îl avem, de canapeaua noastră și implicit de confortul de care dispunem.<br><br> Pentru a face acest lucru posibil este important să se investească în confort, nu doar fizic, ci și psihic. Din acest punct de vedere, amenajarea trebuie să evite culorile obositoare și decorul supraîncărcat.
 
  
@@ -73,7 +73,7 @@
                     Infrastructura necesară pentru un living Hi-Tech
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living5.jpg" style="float: left;width: 40%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="living5.jpg" style="float: left;width: 40%;padding-right: 20px;" > 
                     Trăim într-o eră în care trebuie să fim conectați în permanență cu tehnologia, iar o amenajare corespunzătoare a livingului presupune o atenție deosebită la detalii precum alegerea unor echipamente ultramoderne.
                     <br><br> În funcție de spațiul de care dispui, îți propunem următoarele tehnologii HI-Tech:
                     <ul style="font-size: x-large;text-align: justify; text-indent: 50px;">
