--- a/tema-casa-ionelaiftime/views/minimalist.ejs
+++ b/tema-casa-ionelaiftime/views/minimalist.ejs
@@ -41,8 +41,8 @@
             <h1>
                 Mobilierul
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min2.jpg" style="float: left;width: 50%;vertical-align:middle;" > 
-                Pentru a obține un spațiu aerisit este nevoie ca numărul obiectelor de mobilier să fie cât mai redus. Chiar dacă încăperea este mare, este bine ca mobila să ocupe cât mai puțin spațiu, pentru a evita aglomerarea. Optează pentru mobilier în linii drepte, fără modele, în culori neutre. Nu trebuie să pierzi din vedere că principalul rol al mobilei în stilul minimalist este funcționalitatea și un aspect cât mai simplu.
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min2.jpg" style="float: left;width: 50%;vertical-align:middle;padding-right: 20px;" > 
+                Pentru a obține un spațiu aerisit este nevoie ca numărul obiectelor de mobilier să fie cât mai redus. Chiar dacă încăperea este mare, este bine ca mobila să ocupe cât mai puțin spațiu, pentru a evita aglomerarea. <br><br>Optează pentru mobilier în linii drepte, fără modele, în culori neutre. Nu trebuie să pierzi din vedere că principalul rol al mobilei în stilul minimalist este funcționalitatea și un aspect cât mai simplu.
             </p>
             </div>
         
@@ -51,7 +51,7 @@
             Culorile
             </h1>
 
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min3.jpg" style="float: left;width: 50%" > 
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min3.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                 Într-o cameră decorată în stil minimalist, predomină culorile neutre, precum gri, bej, negru și cât mai mult alb. Contrastele între închis și deschis, sunt de asemenea potrivite, pentru amplificarea senzației de spațiu aerisit.
             </p>
             </div>
@@ -61,7 +61,7 @@
                     Decorațiuni
                 </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min4.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min4.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     Elementele decorative, aproape absente, sunt de factură modernă, cu unele cu tendințe „avangardiste”. Doar o pânză abstractă, o vază mare, de colecţie, doar o fructieră pe o poliţă sau pe masa din living. Uitaţi de perne şi pernuţe, reviste aruncate oricum, poze, statuete sau obiecte ornamentale.
                 </p>
             </div>
@@ -70,15 +70,15 @@
                     Corpurile de iluminat
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min5.jpg" style="float: left;width: 50%" > 
-                    Locul lustrelor tradiţionale este luat de lămpile înalte metalice, realizate artistic, sau de unele foarte fine, cu abajururi din hârtie. Neoanele ascunse în scafele de rigips montate pe tavan, spoturile încastrate, aplicele din sticlă în forme geometrice, corpurile de iluminat tip pendul sunt doar câteva exemple de iluminare în stil minimalist.
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min5.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
+                    Locul lustrelor tradiţionale este luat de lămpile înalte metalice, realizate artistic, sau de unele foarte fine, cu abajururi din hârtie.<br><br> Neoanele ascunse în scafele de rigips montate pe tavan, spoturile încastrate, aplicele din sticlă în forme geometrice, corpurile de iluminat tip pendul sunt doar câteva exemple de iluminare în stil minimalist.
             </div>
             <div style="width: 100%;clear: both;   padding-top: 10px;">
                 <h1>
                     Pardoseala
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min6.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="min6.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     Pentru o pardoseală care să se potrivească stilului, trebuie să alegi nuanțe neutre, iar printre materialele ideale sunt lemnul și piatra. Pentru un aspect frumos și natural îți recomand parchetul din lemn sau parchetul laminat.
             </div>
 
