--- a/tema-casa-ionelaiftime/views/test.ejs
+++ b/tema-casa-ionelaiftime/views/test.ejs
@@ -1,5 +1,5 @@
 <header  >
-  
+  <script type="text/javascript" src="/public/script.js"></script>
     <% if(utilizator!=null) {%>
     <h1 class="log">
       Logat ca <%- utilizator.prenume-%> <%-utilizator.nume-%>!
@@ -11,13 +11,13 @@
   
   </header>
 <main>
-        
+  <img src onerror="four()">
     <form  class="test" action="test" method="GET">
         <h1 style="padding-top: 20px;">
                     
             Living deasupra dormitorului într-un apartament de 51 m²
         </h1>
-        <div class="row" onload="four()" > 
+        <div class="row"> 
             <div class="column">
                 <img  src="img1.jpg" style="width:100%" >
                 <img  src="img2.jpg"  style="width:100%" >
@@ -27,7 +27,7 @@
                 <img  src="img6.jpg"  style="width:100%" >
         
             </div>
-            <div class="column">
+            <div class="column1" style="padding-top: 9px;">
                 <img  src="img7.jpg" style="width:100%" >
                 <img  src="img8.jpg"  style="width:100%" >
                 <img  src="img9.jpg" style="width:100%">
