--- a/tema-casa-ionelaiftime/views/test2.ejs
+++ b/tema-casa-ionelaiftime/views/test2.ejs
@@ -1,5 +1,5 @@
 <header  >
-  
+  <script type="text/javascript" src="/public/script.js"></script>
     <% if(utilizator!=null) {%>
     <h1 class="log">
       Logat ca <%- utilizator.prenume-%> <%-utilizator.nume-%>!
@@ -11,13 +11,13 @@
   
   </header>
 <main>
-        
+  <img src onerror="five()">
     <form  class="test2" action="test2" method="GET">
         <h1 style="padding-top: 20px;">
             
             Culori de toamnă și decor retro într-un apartament de 65 m² din Moscova
         </h1>
-        <div class="row" onload="four()" > 
+        <div class="row" > 
             <div class="column">
                 <img  src="img21.jpg" style="width:100%" >
                 <img  src="img22.jpg"  style="width:100%" >
@@ -34,7 +34,7 @@
               
         
             </div>  
-            <div class="column">
+            <div class="column1" >
                 <img  src="img27.jpg" style="width:100%">
                 <img  src="img28.jpg"  style="width:100%">
                 <img  src="img29.jpg" style="width:100%" >
