--- a/tema-casa-ionelaiftime/views/mediteranean.ejs
+++ b/tema-casa-ionelaiftime/views/mediteranean.ejs
@@ -40,8 +40,8 @@
             <h1>
                 Mobilierul
             </h1>
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med2.jpg" style="float: left;width: 50%;vertical-align:middle;" > 
-                De la simplu și funcțional, până la formal și superficial, așa oscilează mobilierul stilului mediteranean. Locuințele sunt dotate cu piese de dimensiuni mari, dar nu foarte încărcate și nu din lemn masiv, ci mai degrabă canapele cu perne confortabile montate pe cadrane subțiri din lemn deschis la culoare sau din fier forjat. Puține piese de mobilier, dar de calitate, pentru o atmosferă plăcută, prietenoasă și aerisită.
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med2.jpg" style="float: left;width: 50%;vertical-align:middle;padding-right: 20px;" > 
+                De la simplu și funcțional, până la formal și superficial, așa oscilează mobilierul stilului mediteranean. <br><br>Locuințele sunt dotate cu piese de dimensiuni mari, dar nu foarte încărcate și nu din lemn masiv, ci mai degrabă canapele cu perne confortabile montate pe cadrane subțiri din lemn deschis la culoare sau din fier forjat. Puține piese de mobilier, dar de calitate, pentru o atmosferă plăcută, prietenoasă și aerisită.
             </p>
             </div>
         
@@ -50,7 +50,7 @@
             Culorile
             </h1>
 
-            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med3.jpg" style="float: left;width: 50%" > 
+            <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med3.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                 Designul interior mediteranean integrează tonurile regăsite în natură precum maro, nuanțe citrice, albastrul mării, galbenul sau violetul lavandei. În general, interiorul este dominat de alb, iar restul culorilor au tonuri mai închise.
             </p>
             </div>
@@ -60,7 +60,7 @@
             Decorațiunile
             </h1>
     
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med4.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med4.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     În ceea ce privește spațiile decorate cu influența spaniolă, acestea sunt bogate, cu mult mobilier masiv sculptat, atmosfera densă fiind dată de drapaje grele și înflorate.      
                 </p>
             </div>
@@ -69,7 +69,7 @@
                 Pereții
             </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med5.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med5.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     Frumusețea unui interior mediteranean este adusă de modelele mozaic, folosite că material de bază pentru acest tip de amenajare, în special pentru pereți, dar și pentru pardoseală.
                     Pentru un perete de accent recomandăm utilizarea tapetului cu modele de tip mozaic, imitație de piatră sau modele mai boeme în nuanțe de albastru marin.
 
@@ -80,7 +80,7 @@
                     Pardoseli specifice
                 </h1>
         
-                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med6.jpg" style="float: left;width: 50%" > 
+                <p style="font-size: x-large;text-align: justify; text-indent: 50px;"><img  src="med6.jpg" style="float: left;width: 50%;padding-right: 20px;" > 
                     Majoritatea caselor în stil mediteranean au pardoselile placate cu gresie, piatră naturală sau travertin, materiale ușor de întreținut și care se pretează perfect sistemelor cu încălzire în pardoseală. Nu este exclusă placarea cu parchet sau podea din lemn.
             </div>
 
